--- a/Saurabh_SP/Base.lproj/Main.storyboard
+++ b/Saurabh_SP/Base.lproj/Main.storyboard
@@ -1,24 +1,177 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HZk-qo-SqE">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Articles-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Saurabh_SP" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="td8-hA-sSR">
+                                <rect key="frame" x="0.0" y="104" width="375" height="45"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sort By:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RF4-pZ-KEd">
+                                        <rect key="frame" x="10" y="5" width="60" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="nlv-AU-kUK"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8O9-W1-gZd">
+                                        <rect key="frame" x="80" y="5" width="100" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="P48-fs-aiN"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                        <state key="normal" title="Publish Date">
+                                            <color key="titleColor" red="0.85490196080000003" green="0.043137254899999998" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="sortByPublish:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PO7-n4-sxO"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="02S-f4-JgZ">
+                                        <rect key="frame" x="190" y="5" width="70" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="70" id="aIm-cE-Alb"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                        <state key="normal" title="None">
+                                            <color key="titleColor" red="0.85490196080000003" green="0.043137254899999998" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="noneSort:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gYq-u3-GPF"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="RF4-pZ-KEd" secondAttribute="bottom" constant="5" id="4KW-e1-HAu"/>
+                                    <constraint firstAttribute="bottom" secondItem="8O9-W1-gZd" secondAttribute="bottom" constant="5" id="Ccz-qg-aje"/>
+                                    <constraint firstItem="8O9-W1-gZd" firstAttribute="leading" secondItem="RF4-pZ-KEd" secondAttribute="trailing" constant="10" id="JS9-Ko-Nmu"/>
+                                    <constraint firstItem="8O9-W1-gZd" firstAttribute="top" secondItem="td8-hA-sSR" secondAttribute="top" constant="5" id="Kru-Nt-Sdn"/>
+                                    <constraint firstAttribute="height" constant="45" id="NCR-FN-qF3"/>
+                                    <constraint firstItem="02S-f4-JgZ" firstAttribute="top" secondItem="td8-hA-sSR" secondAttribute="top" constant="5" id="YGm-qK-d6P"/>
+                                    <constraint firstItem="RF4-pZ-KEd" firstAttribute="leading" secondItem="td8-hA-sSR" secondAttribute="leading" constant="10" id="Yut-vf-KGd"/>
+                                    <constraint firstAttribute="bottom" secondItem="02S-f4-JgZ" secondAttribute="bottom" constant="5" id="gb2-E7-FpD"/>
+                                    <constraint firstItem="02S-f4-JgZ" firstAttribute="leading" secondItem="8O9-W1-gZd" secondAttribute="trailing" constant="10" id="hWn-Zf-d2y"/>
+                                    <constraint firstItem="RF4-pZ-KEd" firstAttribute="top" secondItem="td8-hA-sSR" secondAttribute="top" constant="5" id="hlI-Ba-cKG"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4ud-FP-hk6">
+                                <rect key="frame" x="0.0" y="149" width="375" height="518"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="lxG-Fy-fav"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="C3j-yw-Wpw"/>
+                                </connections>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BJC-fv-t2N">
+                                <rect key="frame" x="0.0" y="64" width="375" height="40"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search by titles" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="iYG-Nz-N9O">
+                                        <rect key="frame" x="10" y="5" width="355" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="RNP-zo-IHj"/>
+                                        </connections>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="iYG-Nz-N9O" secondAttribute="bottom" constant="5" id="1Jw-Y1-xY7"/>
+                                    <constraint firstAttribute="height" constant="40" id="7Yg-KT-cTS"/>
+                                    <constraint firstAttribute="trailing" secondItem="iYG-Nz-N9O" secondAttribute="trailing" constant="10" id="FAX-m0-0Rb"/>
+                                    <constraint firstItem="iYG-Nz-N9O" firstAttribute="leading" secondItem="BJC-fv-t2N" secondAttribute="leading" constant="10" id="Kfn-vI-0fX"/>
+                                    <constraint firstItem="iYG-Nz-N9O" firstAttribute="top" secondItem="BJC-fv-t2N" secondAttribute="top" constant="5" id="hen-EV-pZ4"/>
+                                </constraints>
+                            </view>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="hFC-kN-4w0">
+                                <rect key="frame" x="177.5" y="647" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="E2J-ZB-uzQ"/>
+                                    <constraint firstAttribute="height" constant="20" id="gFp-XJ-LCp"/>
+                                </constraints>
+                                <color key="color" red="0.85490196080000003" green="0.043137254899999998" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="BJC-fv-t2N" secondAttribute="trailing" id="0vq-VJ-cy8"/>
+                            <constraint firstItem="4ud-FP-hk6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="AGg-KX-gR2"/>
+                            <constraint firstItem="BJC-fv-t2N" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="C2F-IL-sXj"/>
+                            <constraint firstItem="hFC-kN-4w0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DBY-Kk-Qzi"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="4ud-FP-hk6" secondAttribute="bottom" id="Iad-J4-9A7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4ud-FP-hk6" secondAttribute="trailing" id="NXn-PA-rdQ"/>
+                            <constraint firstItem="BJC-fv-t2N" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="XZw-D0-1Ld"/>
+                            <constraint firstItem="4ud-FP-hk6" firstAttribute="top" secondItem="td8-hA-sSR" secondAttribute="bottom" id="ZvV-e1-q1g"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="hFC-kN-4w0" secondAttribute="bottom" id="i2O-ER-raI"/>
+                            <constraint firstItem="td8-hA-sSR" firstAttribute="top" secondItem="BJC-fv-t2N" secondAttribute="bottom" id="zGG-8P-yKB"/>
+                            <constraint firstItem="td8-hA-sSR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="zIU-KM-UkQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="td8-hA-sSR" secondAttribute="trailing" id="zYZ-v7-q5I"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Articles" id="q57-tr-byZ"/>
+                    <connections>
+                        <outlet property="lowerActivity" destination="hFC-kN-4w0" id="bFO-sF-vcw"/>
+                        <outlet property="noneButton" destination="02S-f4-JgZ" id="0aN-sx-eWE"/>
+                        <outlet property="publishButton" destination="8O9-W1-gZd" id="PRV-u4-IDf"/>
+                        <outlet property="searchField" destination="iYG-Nz-N9O" id="vjQ-P9-KcC"/>
+                        <outlet property="tableView" destination="4ud-FP-hk6" id="AAm-GU-T4z"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="730" y="-314"/>
+        </scene>
+        <!--Web View Controller-->
+        <scene sceneID="dXQ-Jn-idi">
+            <objects>
+                <viewController storyboardIdentifier="WebViewController" id="9UD-Fs-iUX" customClass="WebViewController" customModule="Saurabh_SP" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ebz-jT-GJF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Ix6-Sc-MAF"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MDT-kL-TaD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1948" y="-416"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="m23-XF-BeG">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HZk-qo-SqE" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XYl-Un-vdv">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="LLa-wd-0YK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sda-ae-0Py" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="-580.65967016491754"/>
         </scene>
     </scenes>
 </document>
